[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/theme/fonts/font_lesson_heading.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/theme/fonts/font_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/theme/hseparator_lesson_content.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/screens/lesson/UIContentBlock.gd" type="Script" id=5]

[node name="UIContentBlock" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="Layout" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1070.0
mouse_filter = 2

[node name="ContentHeader" type="Label" parent="Panel/MarginContainer/Layout"]
margin_right = 1920.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 1 )
text = "Optional Heading"
autowrap = true

[node name="ContentLayout" type="HBoxContainer" parent="Panel/MarginContainer/Layout"]
margin_top = 60.0
margin_right = 1920.0
margin_bottom = 234.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContent" type="RichTextLabel" parent="Panel/MarginContainer/Layout/ContentLayout" groups=["rich_text_label"]]
margin_right = 1920.0
margin_bottom = 174.0
rect_min_size = Vector2( 320, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Eat all the power cords play time please stop looking at your phone and pet me milk the cow. Sugar, my siamese, stalks me (in a good way), day and night . Meowzer pose purrfectly to show my beauty. Naughty running cat. Meow all night the fat cat sat on the mat bat away with paws. Scoot butt on the rug knock dish off table head butt cant eat out of my own dish for pet me pet me pet me pet me, bite, scratch, why are you petting me leave hair everywhere i do no work yet get food, shelter, and lots of stuff just like man who lives with us. White cat sleeps on a black shirt jump off balcony, onto stranger's head. Lounge in doorway my left donut is missing, as is my right shake treat bag, yet jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed or spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce. Only use one corner of the litter box. Play time. Hey! you there, with the hands meowing chowing and wowing lick sellotape stare at ceiling, for sit as close as possible to warm fire "
text = "Eat all the power cords play time please stop looking at your phone and pet me milk the cow. Sugar, my siamese, stalks me (in a good way), day and night . Meowzer pose purrfectly to show my beauty. Naughty running cat. Meow all night the fat cat sat on the mat bat away with paws. Scoot butt on the rug knock dish off table head butt cant eat out of my own dish for pet me pet me pet me pet me, bite, scratch, why are you petting me leave hair everywhere i do no work yet get food, shelter, and lots of stuff just like man who lives with us. White cat sleeps on a black shirt jump off balcony, onto stranger's head. Lounge in doorway my left donut is missing, as is my right shake treat bag, yet jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed or spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce. Only use one corner of the litter box. Play time. Hey! you there, with the hands meowing chowing and wowing lick sellotape stare at ceiling, for sit as close as possible to warm fire "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentSeparator" type="HSeparator" parent="Panel/MarginContainer/Layout"]
margin_left = 860.0
margin_top = 250.0
margin_right = 1060.0
margin_bottom = 258.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
size_flags_horizontal = 4
custom_styles/separator = ExtResource( 3 )
